Fix spacing of foods-card__fbs-header

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -281,9 +281,9 @@ main {
   }
 }
 
-.foods-card__fbs {
+.foods-card__fbs-header {
+  padding: 0 0.5em;
   h4 {
-    padding: 0 0.5em;
     font-weight: bold;
   }
 }
